  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.4.2.39 2000/03/20 12:52:24 andreasb Exp $
==========================================================================

2.8000
------

2.8008.459  new: all: new rc5 K7 core thanks to
                 Sean Stanek <vulture@iastate.edu>
            chg: macos: now supports all variants of System 7
                 Linux: now attempts to explicitly load resolv libraries for
                 dns resolution for greater glibc/libc cross compatibility.
                 all: checkpointing now done at 10% or 10 minute intervals,
                 instead of 10% with 10 minute minimum.
                 winnt4: pause on process handling optimized
                 all: now logs, if exitfile was found during startup.
                 all: time threshold uses fetch work threshold > 0 as minimum
                 number of workunits to be fetched.
                 all: -b[in] <pn> <n> now clears time threshold for <pn>.
                 all: rotating projects before fetching disabled by default.
            fix: all: OGR -> RC5 / CSC -> RC5 switchover hang.
                 all: OGR nodecount network packet ordering fixed.
                 all: setting clock back during network ops could hang.
                 all: block counts during fetching do not fluctuate anymore.
                 Freebsd: timezone detection for automatic proxy pick works.
                 many: better file system locking on buffers done now.
                 all: reported OGR noderate when completing a resumed stub is 
                 now the correct rate (was displayed as unacceptably high).